[cozystack-operator] Introduce Cozystack-operator core logic
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/packages/core/flux-aio/Makefile
+++ b/packages/core/flux-aio/Makefile
@@ -12,7 +12,10 @@ apply:
 diff:
 	cozypkg show -n $(NAMESPACE) $(NAME) --plain | kubectl diff -f-
 
-update:
+update: update-old update-new
+
+# TODO: remove old manifest after migration to cozystack-operator
+update-old:
 	timoni bundle build -f flux-aio.cue > templates/fluxcd.yaml
 	yq eval '(select(.kind == "Namespace") | .metadata.labels."pod-security.kubernetes.io/enforce") = "privileged"' -i templates/fluxcd.yaml
 	sed -i templates/fluxcd.yaml \
@@ -20,3 +23,12 @@ update:
 		-e 's|\.cluster\.local\.,||g' -e 's|\.cluster\.local\,||g' -e 's|\.cluster\.local\.||g' \
 		-e '/value: .svc/a \            {{- include "cozy.kubernetes_envs" . | nindent 12 }}' \
 		-e '/hostNetwork: true/i \      dnsPolicy: ClusterFirstWithHostNet'
+
+update-new:
+	timoni bundle build -f flux-aio.cue > ../../../internal/fluxinstall/manifests/fluxcd.yaml
+	yq eval '(select(.kind == "Namespace") | .metadata.labels."pod-security.kubernetes.io/enforce") = "privileged"' -i ../../../internal/fluxinstall/manifests/fluxcd.yaml
+	sed -i ../../../internal/fluxinstall/manifests/fluxcd.yaml \
+		-e '/timoni/d' \
+		-e 's|\.cluster\.local\.,||g' -e 's|\.cluster\.local\,||g' -e 's|\.cluster\.local\.||g'
+	# TODO: solve dns issue with hostNetwork for installing helmreleases in tenant k8s clusters
+	#-e '/hostNetwork: true/i \      dnsPolicy: ClusterFirstWithHostNet' 
