--- a/packages/system/seaweedfs/charts/seaweedfs/templates/s3/s3-service.yaml
+++ b/packages/system/seaweedfs/charts/seaweedfs/templates/s3/s3-service.yaml
@@ -14,6 +14,7 @@ metadata:
     {{- toYaml .Values.s3.annotations | nindent 4 }}
 {{- end }}
 spec:
+  trafficDistribution: PreferClose
   internalTrafficPolicy: {{ .Values.s3.internalTrafficPolicy | default "Cluster" }}
   ports:
   - name: "swfs-s3"
