--- a/packages/core/installer/definitions/cozystack.io_packages.yaml
+++ b/packages/core/installer/definitions/cozystack.io_packages.yaml
@@ -148,6 +148,21 @@ spec:
                   - type
                   type: object
                 type: array
+              dependencies:
+                additionalProperties:
+                  description: DependencyStatus represents the readiness status of
+                    a dependency
+                  properties:
+                    ready:
+                      description: Ready indicates whether the dependency is ready
+                      type: boolean
+                  required:
+                  - ready
+                  type: object
+                description: |-
+                  Dependencies tracks the readiness status of each dependency
+                  Key is the dependency package name, value indicates if the dependency is ready
+                type: object
             type: object
         type: object
     served: true
