--- a/packages/core/installer/definitions/cozystack.io_packagesources.yaml
+++ b/packages/core/installer/definitions/cozystack.io_packagesources.yaml
@@ -12,8 +12,7 @@ spec:
     listKind: PackageSourceList
     plural: packagesources
     shortNames:
-    - pkgsrc
-    - pkgsrcs
+    - pks
     singular: packagesource
   scope: Cluster
   versions:
