Fix: move controller crds to definitions
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/packages/system/cozystack-controller/templates/crds/crds.yaml
+++ b/packages/system/cozystack-controller/templates/crds/crds.yaml
@@ -1,4 +1,4 @@
-{{- range $path, $_ := .Files.Glob "crds/*" }}
+{{- range $path, $_ := .Files.Glob "definitions/*" }}
 ---
 {{ $.Files.Get $path }}
 {{- end }}
