--- a/packages/core/platform/Makefile
+++ b/packages/core/platform/Makefile
@@ -4,22 +4,22 @@ NAMESPACE=cozy-system
 include ../../../scripts/common-envs.mk
 
 show:
-	cozypkg show -n $(NAMESPACE) $(NAME) --plain
+	cozyhr show -n $(NAMESPACE) $(NAME) --plain
 
 apply:
-	cozypkg show -n $(NAMESPACE) $(NAME) --plain | kubectl apply -f-
+	cozyhr show -n $(NAMESPACE) $(NAME) --plain | kubectl apply -f-
 	kubectl delete helmreleases.helm.toolkit.fluxcd.io -l cozystack.io/marked-for-deletion=true -A
 
 reconcile: apply
 
 namespaces-show:
-	cozypkg show -n $(NAMESPACE) $(NAME) --plain -s templates/namespaces.yaml
+	cozyhr show -n $(NAMESPACE) $(NAME) --plain -s templates/namespaces.yaml
 
 namespaces-apply:
-	cozypkg show -n $(NAMESPACE) $(NAME) --plain -s templates/namespaces.yaml | kubectl apply -f-
+	cozyhr show -n $(NAMESPACE) $(NAME) --plain -s templates/namespaces.yaml | kubectl apply -f-
 
 diff:
-	cozypkg show -n $(NAMESPACE) $(NAME) --plain | kubectl diff -f-
+	cozyhr show -n $(NAMESPACE) $(NAME) --plain | kubectl diff -f-
 
 image: image-assets
 image-assets:
