--- a/packages/system/fluxcd/Makefile
+++ b/packages/system/fluxcd/Makefile
@@ -4,7 +4,7 @@ NAMESPACE=cozy-$(NAME)
 include ../../../scripts/package.mk
 
 apply-locally:
-	cozypkg apply --plain -n $(NAMESPACE) $(NAME)
+	cozyhr apply --plain -n $(NAMESPACE) $(NAME)
 
 update:
 	rm -rf charts
