[backups] Implement Velero strategy controller
## What this PR does

This patch implements the Reconcile function for BackupJobs with a
Velero strategy ref.

### Release note

```release-note
[backups] Implement the Velero backup strategy controller.
```

Signed-off-by: Andrey Kolkov <androndo@gmail.com>

--- a/packages/system/backup-controller/definitions/backups.cozystack.io_backupjobs.yaml
+++ b/packages/system/backup-controller/definitions/backups.cozystack.io_backupjobs.yaml
@@ -14,7 +14,11 @@ spec:
     singular: backupjob
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.phase
+      name: Phase
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: |-
@@ -233,3 +237,5 @@ spec:
     - jsonPath: .spec.applicationRef.name
     served: true
     storage: true
+    subresources:
+      status: {}
