--- a/packages/system/backup-controller/templates/rbac.yaml
+++ b/packages/system/backup-controller/templates/rbac.yaml
@@ -8,4 +8,25 @@ rules:
   verbs: ["get", "list", "watch"]
 - apiGroups: ["backups.cozystack.io"]
   resources: ["backupjobs"]
+  verbs: ["create", "get", "list", "watch", "update", "patch"]
+- apiGroups: ["backups.cozystack.io"]
+  resources: ["backupjobs/status"]
+  verbs: ["get", "update", "patch"]
+- apiGroups: ["backups.cozystack.io"]
+  resources: ["backups"]
   verbs: ["create", "get", "list", "watch"]
+- apiGroups: ["apps.cozystack.io"]
+  resources: ["buckets", "bucketaccesses", "virtualmachines"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["objectstorage.k8s.io"]
+  resources: ["buckets", "bucketaccesses"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["create", "get", "list", "watch", "update", "patch"]
+- apiGroups: ["kubevirt.io"]
+  resources: ["virtualmachines"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["velero.io"]
+  resources: ["backups", "backupstoragelocations", "volumesnapshotlocations", "restores"]
+  verbs: ["create", "get", "list", "watch", "update", "patch"]
