[lineage-webhook] Tolerate all taints
Signed-off-by: nbykov0 <166552198+nbykov0@users.noreply.github.com>

--- a/packages/system/lineage-controller-webhook/templates/daemonset.yaml
+++ b/packages/system/lineage-controller-webhook/templates/daemonset.yaml
@@ -16,12 +16,7 @@ spec:
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
       tolerations:
-      - key: "node-role.kubernetes.io/control-plane"
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "node-role.kubernetes.io/master"
-        operator: "Exists"
-        effect: "NoSchedule"
+      - operator: Exists
       serviceAccountName: lineage-controller-webhook
       containers:
       - name: lineage-controller-webhook
