[cozystack-api] Tolerate all taints
Signed-off-by: nbykov0 <166552198+nbykov0@users.noreply.github.com>

--- a/packages/system/cozystack-api/templates/deployment.yaml
+++ b/packages/system/cozystack-api/templates/deployment.yaml
@@ -21,6 +21,8 @@ spec:
       labels:
         app: cozystack-api
     spec:
+      tolerations:
+      - operator: Exists
       serviceAccountName: cozystack-api
       {{- if .Values.cozystackAPI.localK8sAPIEndpoint.enabled }}
       nodeSelector:
