[keycloak] Make kubernetes client public
## What this PR does

By its nature, the kubernetes client provisioned in keycloak is public:
anyone can read the client secret. Therefore the secret is not
necessary and the client should be explicitly provisioned as a public
client, not as a confidential client.

### Release note

```release-note
[keycloak] Change the kubernetes client to be public, without a client
secret.
```

Signed-off-by: Timofei Larkin <lllamnyp@gmail.com>

--- a/packages/extra/info/templates/kubeconfig.yaml
+++ b/packages/extra/info/templates/kubeconfig.yaml
@@ -1,14 +1,18 @@
 {{- $host := .Values._namespace.host | default (index .Values._cluster "root-host") }}
-{{- $k8sClientSecret := lookup "v1" "Secret" "cozy-keycloak" "k8s-client" }}
-
-{{- if $k8sClientSecret }}
-{{- $apiServerEndpoint := index .Values._cluster "api-server-endpoint" }}
-{{- $managementKubeconfigEndpoint := default "" (index .Values._cluster "management-kubeconfig-endpoint") }}
-{{- if and $managementKubeconfigEndpoint (ne $managementKubeconfigEndpoint "") }}
-{{- $apiServerEndpoint = $managementKubeconfigEndpoint }}
-{{- end }}
-{{- $k8sClient := index $k8sClientSecret.data "client-secret-key" | b64dec }}
-{{- $k8sCa := index .Values._cluster "kube-root-ca" }}
+{{- $oidcEnabled := index .Values._cluster "oidc-enabled" }}
+{{- if $oidcEnabled }}
+{{-   $apiServerEndpoint := index .Values._cluster "api-server-endpoint" }}
+{{-   $managementKubeconfigEndpoint := default "" (index .Values._cluster "management-kubeconfig-endpoint") }}
+{{-   if and $managementKubeconfigEndpoint (ne $managementKubeconfigEndpoint "") }}
+{{-     $apiServerEndpoint = $managementKubeconfigEndpoint }}
+{{-   end }}
+{{-   $k8sCa := index .Values._cluster "kube-root-ca" }}
+{{-   if .Capabilities.APIVersions.Has "helm.toolkit.fluxcd.io/v2" }}
+{{-     $tenantRoot := lookup "helm.toolkit.fluxcd.io/v2" "HelmRelease" "tenant-root" "tenant-root" }}
+{{-     if and $tenantRoot $tenantRoot.spec $tenantRoot.spec.values $tenantRoot.spec.values.host }}
+{{-       $host = $tenantRoot.spec.values.host }}
+{{-     end }}
+{{-   end }}
 ---
 apiVersion: v1
 kind: Secret
@@ -39,7 +43,6 @@ stringData:
           - get-token
           - --oidc-issuer-url=https://keycloak.{{ $host }}/realms/cozy
           - --oidc-client-id=kubernetes
-          - --oidc-client-secret={{ $k8sClient }}
           - --skip-open-browser
           command: kubectl
 {{- end }}
